--- a/templates/login.html
+++ b/templates/login.html
@@ -33,8 +33,8 @@
 
     <script>
         // {% if msg %}
-        //    alert("{{ msg }}")
-        // {% endif %}
+            //    alert("{{ msg }}")
+            // {% endif %}
 
         function toggle_sign_up() {
             $("#sign-up-box").toggleClass("is-hidden")
@@ -222,6 +222,8 @@
         body {
             margin: 0;
             padding: 0;
+            min-width: 780px;
+            max-height: 1200px;
             width: 100%;
             height: 100vh;
             display: flex;
@@ -232,37 +234,44 @@
             display: flex;
             justify-content: center;
             font-family: 'Oleo Script Swash Caps', cursive;
-            font-size: 60px;
+            font-size: 50px;
             margin: 0;
             color: white;
+            margin-bottom: 50px;
         }
 
         .pic {
-            width: 200px;
-            height: 200px;
-            margin: 60px auto 20px auto;
-
-            color: white;
-
-            text-align: center;
-
-            background-image: url("/static/car.png");
-            background-size: cover;
-            background-position: center;
-
-            border-radius: 150px;
-
-            padding-top: 40px;
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            align-content: flex-end;
         }
 
+        .pic img {
+            width: 180px;
+            height: 180px;
+            margin-top: 100px;
+            margin-bottom: 30px;
+        }
+
+        .section {
+            margin-top: 20px;
+            padding: 10px;
+        }
 
         .wrap {
-            max-width: 450px;
+            width: 35%;
 
             box-shadow: 0px 0px 3px 0px black;
-            padding: 20px;
+            padding: 0px;
 
             background-color: #141e38;
+
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+
+            box-sizine: border-box;
         }
 
         .button.is-sparta {
@@ -304,7 +313,7 @@
         .side-background {
             background-image: url("/static/4.jpg");
             background-size: cover;
-            width: 80%;
+            width: 65%;
             position: relative;
 
             display: flex;
@@ -344,7 +353,9 @@
 <div class="wrap">
 
     <!-- 로고 & 타이틀 -->
-    <div class="pic"></div>
+    <div class="pic">
+        <img src="/static/car.png"/>
+    </div>
     <div class="title">
         <h1>PingMe!</h1>
     </div>
@@ -443,7 +454,7 @@
                             </div>
 
                             <!-- 회원 가입 / 취소 Btn -->
-                            <nav class="level is-mobile" style="margin-top:20px;">
+                            <nav class="level is-mobile" style="margin-top:10px;">
                                 <button class="level-item button is-sparta" onclick="sign_up()">회원가입</button>
                                 <button class="level-item button is-sparta is-outlined" onclick="toggle_sign_up()">취소
                                 </button>
